--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -1,9 +1,3 @@
-.card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 img {
     width: 150px;
     border-radius: 150px;
@@ -19,19 +13,43 @@ ul {
     padding-left: 0;
 }
 
-li a {
+.card {
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+    padding: 40px;
+    margin: 40px;
+
     display: flex;
     flex-direction: row;
     align-items: center;
-    column-gap: 10px;
+    justify-content: center;
+    gap: 40px;
+
+    max-width: 800px;
 }
 
-a {
-    text-decoration: none;
-    color: rgb(62, 126, 199)
+.divider {
+    background-color: black;
+    height: 25em;
+    width: 5pt;
+    border-radius: 20px;
 }
 
-a:hover {
-    text-decoration: underline;
-    color: rgba(0, 0, 0)
+.about-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+@media only screen and (max-width: 769px) {
+    .card {
+        flex-direction: column;
+    }
+    .divider {
+        background-color: black;
+        height: 1pt;
+        width: 15em;
+    }
 }
