--- a/src/Hero.css
+++ b/src/Hero.css
@@ -11,6 +11,7 @@ div {
     align-items: center;
     padding: 0px 10%;
     margin: 200px 0px 0px 0px;
+    background-color: var(--offWhite);
 }
 
 .hero span {
