--- a/src/components/NavLink.module.css
+++ b/src/components/NavLink.module.css
@@ -2,6 +2,7 @@
     text-decoration: none !important;
     display: inline-block;
     position: relative;
+    color: var(--darkGrey) !important;
 }
 
 .pageLink::after {
@@ -15,6 +16,8 @@
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
     text-decoration: none !important;
+    color: var(--darkGrey) !important;
+    background-color: var(--darkGrey);
 }
 
 .pageLink:hover::after {
@@ -22,18 +25,5 @@
     transform-origin: bottom left;
     cursor: pointer;
     text-decoration: none !important;
-}
-
-.darkGrey {
     color: var(--darkGrey) !important;
-}
-.darkGrey::after {
-    background-color: var(--darkGrey);
-}
-
-.offWhite {
-    color: var(--offWhite) !important;
-}
-.offWhite::after {
-    background-color: var(--offWhite);
 }
