--- a/src/pages/caseStudies/CaseStudy.module.css
+++ b/src/pages/caseStudies/CaseStudy.module.css
@@ -1,4 +1,4 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css');
+/* @import url('https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css'); */
 
 p,
 ul,
