fix colours for nav links

--- a/src/components/NavLink.module.css
+++ b/src/components/NavLink.module.css
@@ -27,3 +27,11 @@
     text-decoration: none !important;
     color: var(--darkGrey) !important;
 }
+
+.offWhite {
+    color: var(--offWhite) !important;
+}
+
+.offWhite:after {
+    background-color: var(--offWhite) !important;
+}
