--- a/src/pages/caseStudies/CaseStudy.module.css
+++ b/src/pages/caseStudies/CaseStudy.module.css
@@ -15,6 +15,7 @@ li {
     align-items: center;
     padding: 145px 40px 40px 40px;
     background-color: transparent;
+    text-align: center;
 }
 
 /* CONTAINER STYLING */
